Closed Bug 600468 Opened 15 years ago Closed 15 years ago

Setting value to the empty string doesn't remove attribute's first child

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla2.0b7
Tracking Status
blocking2.0 --- betaN+

People

(Reporter: mounir, Assigned: mounir)

References

Details

(Keywords: regression, testcase)

Attachments

(2 files)

See testcase. Another regression from bug 566416 :(
Attached file testcase
It's a regression, so, it should be a blocker?
blocking2.0: --- → ?
Attached patch Patch v1Splinter Review
Attachment #479312 - Flags: review?(bzbarsky)
Comment on attachment 479312 [details] [diff] [review] Patch v1 r=me
Attachment #479312 - Flags: review?(bzbarsky) → review+
I don't see where the spec requires this.
(In reply to comment #5) > I don't see where the spec requires this. That's a regression from what we were doing and what Chromium and Opera do. Are you sure that's not what the specs ask? Though, we are going to remove that after Gecko 2.0 so...
blocking2.0: ? → betaN+
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Flags: in-testsuite-
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b8
Flags: in-testsuite- → in-testsuite+
Target Milestone: mozilla2.0b8 → mozilla2.0b7
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: