Bug 600468 - Remove attribute's first child when the value is set to the empty string. r=bz a=blocking-2.0